@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.3
-Date: 2021-4-16
+Date: 2021-4-19
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
