@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.3
+19-04-2021	Revise log10pvalue() and mhtplot.trunc() on p values
 17-04-2021	Simplify pvalue()
 16-04-2021	Change arguments for qnorm() and fix a swapped UCL/LCL bug in gsmr()
 14-04-2021	Add log10pvalue so as to enable mhtplot.trunc() to handle p, log10p, z
